--- a/main.css
+++ b/main.css
@@ -1,69 +1,71 @@
-#about-me-title {
-  font-size: 8vw;
-  white-space: nowrap;
-}
-#about-me-sub {
-  font-size: 3vw;
-  white-space: nowrap;
+body {
+  background-color: #F8E6E6;
 }
 
-@media (min-width:768px) {
-  #about-me-title {
-    font-size: 6vw
+header {
+  /*position: fixed;*/
+  background-color: #18132a;
+  width: 100vw;
+}
+
+nav {
+  width: 100%;
+}
+
+h1 {
+  color: white;
+}
+
+@media only screen and (max-width: 600px) {
+  h1 {
+    font-size: 20px;
+    width: 150px;
+    text-align: center;
   }
-  #about-me-sub {
-    font-size: 2vw
-  }
-}
-
-@media (min-width:992px) {
-  #about-me-title {
-    font-size: 4vw
-  }
-  #about-me-sub {
-    font-size: 1vw
-  }
-}
-
-.container-3d {
-  width: 10vw;
-  overflow: hidden;
-  opacity: 1;
-  transition: 1s;
 }
 
 
-.container-3d:hover {
-  width: 40vw;
-  margin-right: 10px;
-  opacity: 1;
+#logo {
+  width: 40px;
+  height: 40px;
+  object-fit: contain;
+  background-color: grey;
 }
 
-.card-3d {
-  width: 40vw;
-  height: 40vh;
-  border: 2px solid black;
-  transition: 1s;
-  transform-origin: left;
-  transform: perspective(60vw) rotateY(50deg);
+#navbar-button {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 255, 255, 0.5)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
-.container-3d:hover .card-3d {
-  transform: perspective(0) rotateY(0);
-  z-index: 10
+#about-me {
+  background-color: #4240A3;
 }
 
-.card-3d-title {
-  font-size: 3vw;
-  position: relative;
-  left: -10vw;
-  transition: 1s;
+#my-infos {
+  position: static;
+  height: 200px;
+  font-size: calc(10px + 2vw);
+  text-align: center;
+  color: white;
 }
 
-.container-3d:hover .card-3d-title {
-left: 0;
+.my-infos-text {
+  margin-top: 10vw;
+  background-color: rgba(255, 140, 0, 0.4);
 }
 
-.bg-my-simple {
-  background-color: #F8E6E6!important;
+
+#photo-mobile {
+  width: 100%;
+  object-fit: contain;
+}
+
+#photo-pc {
+  width: 100%;
+  object-fit: contain;
+}
+
+.nav-item {
+  color: #F8E6E6;
+  font-weight: bold;
+  font-size: 1.2rem;
 }
